set(DIRECT_SOUND_AUDIO_SYS_LIB "direct_sound_audio_sys_lib")
set(DIRECT_SOUND_AUDIO_SYS_LIB_DESCRIPTION "Direct Sound Audio System")

project(${DIRECT_SOUND_AUDIO_SYS_LIB} DESCRIPTION ${DIRECT_SOUND_AUDIO_SYS_LIB_DESCRIPTION})

file(GLOB_RECURSE DIRECT_SOUND_AUDIO_SYS_LIB_SOURCES *.cpp)

add_library(${DIRECT_SOUND_AUDIO_SYS_LIB} ${DIRECT_SOUND_AUDIO_SYS_LIB_SOURCES})
