set(OPENAL_AUDIO_SYS_LIB "openal_audio_sys_lib")
set(OPENAL_AUDIO_SYS_LIB_DESCRIPTION "OpenAL Audio System")
# set(CMAKE_DEBUG_POSTFIX d)

project(${OPENAL_AUDIO_SYS_LIB} DESCRIPTION ${OPENAL_AUDIO_SYS_LIB_DESCRIPTION})

# include(CTest)
# enable_testing()

file(GLOB_RECURSE OPENAL_AUDIO_SYS_LIB_SOURCES *.cpp)

add_library(${OPENAL_AUDIO_SYS_LIB} ${OPENAL_AUDIO_SYS_LIB_SOURCES})

# set(CPACK_PROJECT_NAME ${PROJECT_NAME})
# set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
# include(CPack)
