set(SDLLIB "sDLLIB")
set(SDLLIB_DESCRIPTION "SDL Audio System")
# set(CMAKE_DEBUG_POSTFIX d)

project(${SDLLIB} DESCRIPTION ${SDLLIB_DESCRIPTION})

# include(CTest)
# enable_testing()

file(GLOB_RECURSE SDLLIB_SOURCES *.cpp)

add_library(${SDLLIB} ${SDLLIB_SOURCES})

# set(CPACK_PROJECT_NAME ${PROJECT_NAME})
# set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
# include(CPack)
